--- a/borneSimulation.ioc
+++ b/borneSimulation.ioc
@@ -10,6 +10,8 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 KeepUserPlacement=true
+LWIP.IPParameters=LWIP_HTTPD
+LWIP.LWIP_HTTPD=1
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
